# Mumblechat

./: .all-contributorsrc  .gitignore  ANDROID_CHAT_SYSTEM.md  CHANGES_SUMMARY.md  CLOUDFLARE_SETUP.md  COMPLETE_SETUP_GUIDE.md  ENDPOINT_MANAGEMENT.md  FUNDING.json  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MCT_VALIDATION_QUICK_GUIDE.md  NO_BOOTSTRAP_DISCOVERY.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  QUICK_REFERENCE.md  QUICK_SETUP_GUIDE.md  README.md  RELAY_DASHBOARD_DEPLOYMENT.md  RELAY_NODE_ARCHITECTURE.md  RELAY_NODE_MCT_FEATURES.md  gradle.properties  new_upload_certificate.pem  package.json  settings.gradle  upload_certificate.pem
.github/: README.md
app/: README.md  build.gradle  proguard-rules.pro  theming.md
app/src/main/cpp/: CMakeLists.txt  keys.c
chrome-extension/: README.md  build.js  generate-icons.js  manifest.json  package-lock.json  package.json
contracts/: .env.example  .gitignore  deployments.json  foundry.toml  hardhat.config.js  package-lock.json  package.json  send-mct.js
desktop-app/: README.md  build.sh  index.html  main.js  package-lock.json  package.json  preload.js
desktop-relay/: .env.example  .gitignore  Dockerfile  README.md  config.example.json  config.json  docker-compose.yml  package-lock.json  package.json  relay.pid
dmz/: build.gradle
docs/: ACTIVITY_TRANSACTIONS_EXPLAINED.md  RAMAPAY_NATIVE_BRIDGE_API.md  RELAY_NODE_GUIDE.md  multi-node-architecture.md  test.md
fastlane/: Appfile
gradle/: libs.versions.toml
hardware_stub/: build.gradle
lib/: README.md
util/: build.gradle
(+1636 files in other folders)
